--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t ankurkumargautam/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run ankurkumargautam/docker-react npm run test -- --coverage
+  - docker run -e CI=true ankurkumargautam/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
